--- a/source/blog/articles/2018-05-22-rbenv.html.markdown
+++ b/source/blog/articles/2018-05-22-rbenv.html.markdown
@@ -1,14 +1,13 @@
 ---
-title: Manage gems with rbenv 
+title: Manage gems with rbenv
+summary: In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
 ---
 
-In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
-
-READMORE
 
 # iOS Projects done right: How to manage the ruby environment of your iOS Project using rbenv
 
 In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
+
 
 ## Special Note
 You should not have to use root user permissions via _sudo_ for any of the installs that follow. If you seem to need to, you most likely already had a permission problem before or you did not install and setup _rbenv_ correctly.
