--- a/source/blog/articles/2018-07-07-article2/2018-07-07-article2.html.markdown
+++ b/source/blog/articles/2018-07-07-article2/2018-07-07-article2.html.markdown
@@ -3,4 +3,18 @@ title: Cooking 42 dishes for IOS development
 summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 ---
 
-# hellooo im article 2!
+# This is article two
+
+
+<pre><code class="language-css">p { color: red }</code></pre>
+<pre><code class="language-Javascript">let name = "something"
+
+function dothings(){
+  let a = [a,v,c];
+  a.forEach((item)=>{
+    return item;
+  });
+}
+</code></pre>
+
+![](plant.jpg)
