--- a/source/blog/articles/2018-05-22-rbenv.html.markdown
+++ b/source/blog/articles/2018-05-22-rbenv.html.markdown
@@ -34,13 +34,17 @@ _rbenv_ can easily be installed using the [brew][7] package manager, so make sur
 ### install rbenv and ruby-build using brew
 Install _rbenv_ (for managing _ruby_ environments) by running
 
-<pre><code class="language-bash">brew install rbenv</code></pre>
+```bash
+brew install rbenv
+```
 
 this will also install _ruby-build_ tool (for installing versions of _ruby_ via _rbenv_)
 
 If you are upgrading run
 
-<pre><code class="language-bash">brew upgrade rbenv ruby-build</code></pre>
+```bash
+brew upgrade rbenv ruby-build
+```
 
 ### setup rbenv for your shell
 
@@ -48,7 +52,9 @@ After installing the tools above, you need to add a call to setup _rbenv_ to you
 
 You can find out which shell you are using by calling
 
-<pre><code class="language-bash">echo $0</code></pre>
+```bash
+echo $0
+```
 
 Depending on the result, you need to either change _\~/.bash\_profile_ (for bash), _\~/.zshrc_ (for zsh) or the corresponding file of your shell if you have another shell.
 
@@ -56,11 +62,15 @@ If the file (e.g. _\~/.bash\_profile_) does not exist before, just create it.
 
 As we use the very good [Oh-My-ZSH][8] as shell, we can edit it by opening _\~/.zshrc_ in a graphical text editor or edit it directly in the shell by calling
 
-<pre><code class="language-bash">nano ~/.zshrc</code></pre>
+```bash
+nano ~/.zshrc
+```
 
 Add
 
-<pre><code class="language-bash">eval "$(rbenv init -)"</code></pre>
+```bash
+eval "$(rbenv init -)"
+```
 
 to the end of the file and save it, then quit your terminal application and reopen it to make sure the changes are applied.
 
@@ -68,7 +78,9 @@ to the end of the file and save it, then quit your terminal application and reop
 ## rbenv commands
 rbenv has various commands, which should be listed when you run
 
-<pre><code class="language-bash">rbenv help</code></pre>
+```bash
+rbenv help
+```
 
 The most important for us in the scope of this article are:
 
@@ -103,19 +115,25 @@ _rbenv which_ and _rbenv whence_ are useful if you have issues when using ruby v
 
 Start by installing the newest version, which is 2.5.1 at the time of this post:
 
-<pre><code class="language-bash">rbenv install 2.5.1</code></pre>
+```bash
+rbenv install 2.5.1
+```
 
 See https://www.ruby-lang.org/en/downloads/ for the most recent version.
 
 If there already is a _.ruby-version_ file, run
 
-<pre><code class="language-bash">rbenv install</code></pre>
+```bash
+rbenv install
+```
 
 without any version argument to install the version set in the _.ruby-version_ file.
 
 Enter your iOS project directory and run
 
-<pre><code class="language-bash">rbenv local 2.5.1</code></pre>
+```bash
+rbenv local 2.5.1
+```
 
 to create a _.ruby-version_ file with the content `2.5.1`.
 
@@ -134,7 +152,9 @@ It can ensure that a defined set of dependencies is installed with the exact ver
 
 For every ruby version installed via rbenv, you have to once run
 
-<pre><code class="language-bash">gem install bundler</code></pre>
+```bash
+gem install bundler
+```
 
 to install the dependency manager.
 
@@ -144,9 +164,10 @@ Bundler defines dependencies using a _Gemfile_.
 
 This defines, what _gems_ (and possibly: what versions) you __want__ to have installed:
 
-<pre><code class="language-bash"># List of gems used in this project
+```bash
+# List of gems used in this project
 gem "cocoapods", "~> 1.5"
-</code></pre>
+```
 
 When updating gems (or adding them to the project), the exact version of the gem that __will__ be installed is written to a file named _Gemfile.lock_.
 
@@ -154,23 +175,31 @@ When updating gems (or adding them to the project), the exact version of the gem
 
 When you do not have a _Gemfile_ yet, you can create one by running
 
-<pre><code class="language-bash">bundle init</code></pre>
+```bash
+bundle init
+```
 
 To add a first dependency, you can run `bundle add <Gemname>`, e.g.
 
-<pre><code class="language-bash">bundle add fastlane</code></pre>
+```bash
+bundle add fastlane
+```
 
 This adds the dependency to the Gemfile and installs the new dependency.
 
 Running
 
-<pre><code class="language-bash">bundle install</code></pre>
+```bash
+bundle install
+```
 
 resolves the dependency graph in the _Gemfile_, installs the dependencies and writes the resolved versions to the _Gemfile.lock_ file. This is important if you edit the _Gemfile_ by hand.
 
 You should now be able to run
 
-<pre><code class="language-bash">bundle exec fastlane</code></pre>
+```bash
+bundle exec fastlane
+```
 
 if everything went right.
 
