--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -1,13 +1,13 @@
 ---
-title: Manage gems with rbenv
-summary: In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
+title: "Manage Gems with rbenv"
+summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.'
+headerImage: "Ruby_cut.jpg"
 ---
-
-
 # iOS Projects done right: How to manage the ruby environment of your iOS Project using rbenv
 
-In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
+![](assets/Ruby_cut.jpg)
 
+In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
 
 ## Special Note
 You should not have to use root user permissions via _sudo_ for any of the installs that follow. If you seem to need to, you most likely already had a permission problem before or you did not install and setup _rbenv_ correctly.
@@ -34,17 +34,13 @@ _rbenv_ can easily be installed using the [brew][7] package manager, so make sur
 ### install rbenv and ruby-build using brew
 Install _rbenv_ (for managing _ruby_ environments) by running
 
-```bash
-brew install rbenv
-```
+	brew install rbenv
 
 this will also install _ruby-build_ tool (for installing versions of _ruby_ via _rbenv_)
 
 If you are upgrading run
 
-```bash
-brew upgrade rbenv ruby-build
-```
+	brew upgrade rbenv ruby-build
 
 ### setup rbenv for your shell
 
@@ -52,9 +48,7 @@ After installing the tools above, you need to add a call to setup _rbenv_ to you
 
 You can find out which shell you are using by calling
 
-```bash
-echo $0
-```
+	echo $0
 
 Depending on the result, you need to either change _\~/.bash\_profile_ (for bash), _\~/.zshrc_ (for zsh) or the corresponding file of your shell if you have another shell.
 
@@ -62,15 +56,11 @@ If the file (e.g. _\~/.bash\_profile_) does not exist before, just create it.
 
 As we use the very good [Oh-My-ZSH][8] as shell, we can edit it by opening _\~/.zshrc_ in a graphical text editor or edit it directly in the shell by calling
 
-```bash
-nano ~/.zshrc
-```
+	nano ~/.zshrc
 
 Add
 
-```bash
-eval "$(rbenv init -)"
-```
+	eval "$(rbenv init -)"
 
 to the end of the file and save it, then quit your terminal application and reopen it to make sure the changes are applied.
 
@@ -78,9 +68,7 @@ to the end of the file and save it, then quit your terminal application and reop
 ## rbenv commands
 rbenv has various commands, which should be listed when you run
 
-```bash
-rbenv help
-```
+	rbenv help
 
 The most important for us in the scope of this article are:
 
@@ -115,25 +103,19 @@ _rbenv which_ and _rbenv whence_ are useful if you have issues when using ruby v
 
 Start by installing the newest version, which is 2.5.1 at the time of this post:
 
-```bash
-rbenv install 2.5.1
-```
+	rbenv install 2.5.1
 
 See https://www.ruby-lang.org/en/downloads/ for the most recent version.
 
 If there already is a _.ruby-version_ file, run
 
-```bash
-rbenv install
-```
+	rbenv install
 
 without any version argument to install the version set in the _.ruby-version_ file.
 
 Enter your iOS project directory and run
 
-```bash
-rbenv local 2.5.1
-```
+	rbenv local 2.5.1
 
 to create a _.ruby-version_ file with the content `2.5.1`.
 
@@ -142,7 +124,6 @@ _rbenv local_ will only do this, if the version is already installed.
 After restarting the terminal (or entering the parent directory and reentering the directory), running `rbenv version` should give you the version  `2.5.1` if everything worked correctly.
 
 ## How to use Bundler
-
 ### What is Bundler?
 
 _bundler_ is a dependency manager for _ruby_, as _cocoapods_ is for the iOS ecosystem.
@@ -152,9 +133,7 @@ It can ensure that a defined set of dependencies is installed with the exact ver
 
 For every ruby version installed via rbenv, you have to once run
 
-```bash
-gem install bundler
-```
+	gem install bundler
 
 to install the dependency manager.
 
@@ -164,10 +143,8 @@ Bundler defines dependencies using a _Gemfile_.
 
 This defines, what _gems_ (and possibly: what versions) you __want__ to have installed:
 
-```bash
-# List of gems used in this project
-gem "cocoapods", "~> 1.5"
-```
+	# List of gems used in this project
+	gem "cocoapods", "~> 1.5"
 
 When updating gems (or adding them to the project), the exact version of the gem that __will__ be installed is written to a file named _Gemfile.lock_.
 
@@ -175,31 +152,23 @@ When updating gems (or adding them to the project), the exact version of the gem
 
 When you do not have a _Gemfile_ yet, you can create one by running
 
-```bash
-bundle init
-```
+	bundle init
 
 To add a first dependency, you can run `bundle add <Gemname>`, e.g.
 
-```bash
-bundle add fastlane
-```
+	bundle add fastlane
 
 This adds the dependency to the Gemfile and installs the new dependency.
 
 Running
 
-```bash
-bundle install
-```
+	bundle install
 
 resolves the dependency graph in the _Gemfile_, installs the dependencies and writes the resolved versions to the _Gemfile.lock_ file. This is important if you edit the _Gemfile_ by hand.
 
 You should now be able to run
 
-```bash
-bundle exec fastlane
-```
+	bundle exec fastlane
 
 if everything went right.
 
