--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -1,13 +1,14 @@
 ---
-title: "Manage Gems with rbenv"
+title: "Better iOS projects: How to manage the ruby environment of your iOS project using rbenv"
 summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.'
-headerImage: "Ruby_cut.jpg"
+headerImage: "2018-05-22-rbenv/assets/Ruby_cut.jpg"
 ---
-# iOS Projects done right: How to manage the ruby environment of your iOS Project using rbenv
+# Better iOS projects: How to manage the ruby environment of your iOS project using rbenv
 
 ![](assets/Ruby_cut.jpg)
+*Managing rubies is easier with rbenv.*
 
-In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
+In the series "Better iOS projects", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
 
 ## Special Note
 You should not have to use root user permissions via _sudo_ for any of the installs that follow. If you seem to need to, you most likely already had a permission problem before or you did not install and setup _rbenv_ correctly.
