added markup for syntaxhighlighting

--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -1,6 +1,6 @@
 ---
 title: "Better iOS projects: How to manage the ruby environment of your iOS project using rbenv"
-summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.'
+summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects…'
 headerImage: "2018-05-22-rbenv/assets/Ruby_cut.jpg"
 ---
 # Better iOS projects: How to manage the ruby environment of your iOS project using rbenv
@@ -35,13 +35,17 @@ _rbenv_ can easily be installed using the [brew][7] package manager, so make sur
 ### install rbenv and ruby-build using brew
 Install _rbenv_ (for managing _ruby_ environments) by running
 
-	brew install rbenv
+```bash
+brew install rbenv
+```
 
 this will also install _ruby-build_ tool (for installing versions of _ruby_ via _rbenv_)
 
 If you are upgrading run
 
-	brew upgrade rbenv ruby-build
+```bash
+brew upgrade rbenv ruby-build
+```
 
 ### setup rbenv for your shell
 
@@ -49,7 +53,9 @@ After installing the tools above, you need to add a call to setup _rbenv_ to you
 
 You can find out which shell you are using by calling
 
-	echo $0
+```bash
+echo $0
+```
 
 Depending on the result, you need to either change _\~/.bash\_profile_ (for bash), _\~/.zshrc_ (for zsh) or the corresponding file of your shell if you have another shell.
 
@@ -57,11 +63,15 @@ If the file (e.g. _\~/.bash\_profile_) does not exist before, just create it.
 
 As we use the very good [Oh-My-ZSH][8] as shell, we can edit it by opening _\~/.zshrc_ in a graphical text editor or edit it directly in the shell by calling
 
-	nano ~/.zshrc
+```bash
+nano ~/.zshrc
+```
 
 Add
 
-	eval "$(rbenv init -)"
+```bash
+eval "$(rbenv init -)"
+```
 
 to the end of the file and save it, then quit your terminal application and reopen it to make sure the changes are applied.
 
@@ -69,7 +79,9 @@ to the end of the file and save it, then quit your terminal application and reop
 ## rbenv commands
 rbenv has various commands, which should be listed when you run
 
-	rbenv help
+```bash
+rbenv help
+```
 
 The most important for us in the scope of this article are:
 
@@ -104,19 +116,25 @@ _rbenv which_ and _rbenv whence_ are useful if you have issues when using ruby v
 
 Start by installing the newest version, which is 2.5.1 at the time of this post:
 
-	rbenv install 2.5.1
+```bash
+rbenv install 2.5.1
+```
 
 See https://www.ruby-lang.org/en/downloads/ for the most recent version.
 
 If there already is a _.ruby-version_ file, run
 
-	rbenv install
+```bash
+rbenv install
+```
 
 without any version argument to install the version set in the _.ruby-version_ file.
 
 Enter your iOS project directory and run
 
-	rbenv local 2.5.1
+```bash
+rbenv local 2.5.1
+```
 
 to create a _.ruby-version_ file with the content `2.5.1`.
 
@@ -134,7 +152,9 @@ It can ensure that a defined set of dependencies is installed with the exact ver
 
 For every ruby version installed via rbenv, you have to once run
 
-	gem install bundler
+```bash
+gem install bundler
+```
 
 to install the dependency manager.
 
@@ -144,8 +164,10 @@ Bundler defines dependencies using a _Gemfile_.
 
 This defines, what _gems_ (and possibly: what versions) you __want__ to have installed:
 
-	# List of gems used in this project
-	gem "cocoapods", "~> 1.5"
+```bash
+# List of gems used in this project
+gem "cocoapods", "~> 1.5"
+```
 
 When updating gems (or adding them to the project), the exact version of the gem that __will__ be installed is written to a file named _Gemfile.lock_.
 
@@ -153,23 +175,31 @@ When updating gems (or adding them to the project), the exact version of the gem
 
 When you do not have a _Gemfile_ yet, you can create one by running
 
-	bundle init
+```bash
+bundle init
+```
 
 To add a first dependency, you can run `bundle add <Gemname>`, e.g.
 
-	bundle add fastlane
+```bash
+bundle add fastlane
+```
 
 This adds the dependency to the Gemfile and installs the new dependency.
 
 Running
 
-	bundle install
+```bash
+bundle install
+```
 
 resolves the dependency graph in the _Gemfile_, installs the dependencies and writes the resolved versions to the _Gemfile.lock_ file. This is important if you edit the _Gemfile_ by hand.
 
 You should now be able to run
 
-	bundle exec fastlane
+```bash
+bundle exec fastlane
+```
 
 if everything went right.
 
