back link author

--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -3,6 +3,8 @@ title: "Better iOS projects: How to manage the ruby environment of your iOS proj
 summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects…'
 headerImage: "2018-05-22-rbenv/assets/Ruby_cut.jpg"
 ---
+_Mai 22, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
+
 # Better iOS projects: How to manage the ruby environment of your iOS project using rbenv
 
 ![](assets/Ruby_cut.jpg)
