replace leftover “iOS Projects done right”

--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -1,6 +1,6 @@
 ---
 title: "Better iOS projects: How to manage the ruby environment of your iOS project using rbenv"
-summary: 'In the series "iOS Projects done right", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects…'
+summary: 'In the series "Better iOS projects", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects…'
 headerImage: "2018-05-22-rbenv/assets/Ruby_cut.jpg"
 ---
 _Mai 22, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
@@ -216,7 +216,7 @@ When you check out a project and want to get it to build, it is sufficient to ru
 
 Install and properly manage the gems your project needs and at least teach your team how to install new ruby versions via _rbenv_ and gems via _bundle_.
 
-In the next post of the "iOS Projects done right" series, we will have a look at some advanced features of rbenv. Stay tuned!
+In the next post of the "Better iOS Projects" series, we will have a look at some advanced features of rbenv. Stay tuned!
 
 ## Glossary
 
