fix brew installation

--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -32,6 +32,7 @@ Though `xcodegen` is still quite a young project, it already can do a lot. Somet
 Amongst other methods of installation, you can install xcodegen using brew, by running
 
 ```bash
+brew tap yonaskolb/XcodeGen https://github.com/yonaskolb/XcodeGen.git
 brew install xcodegen
 ```
 
