add leave Xcode instruction

--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -48,7 +48,7 @@ First, create a new blank Single Page iOS App with `Xcode` to initially get all 
 
 We will now recreate the project using a `project.yml` file.
 
-Create a `project.yml` file with the following content in the root:
+Leave `Xcode` and create a `project.yml` file with the following content in the root:
 
 ```yml
 name: XcodegenApp # The name of the App
