--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -70,13 +70,15 @@ targets: # The List of our targets
       INFOPLIST_FILE: "XcodegenApp/Info.plist"
 ```
 
+![](assets/projectyml.png)
+
 Then, rename the existing `.xcodeproj` (so that you can have a look at it
 and compare). I always just add "Backup" to the name here.
 
 In the terminal, in your project root, run `xcodegen` or `mint run
 xcodegen`:
 
-
+![](assets/xcodegen.png)
 
 Open the project and run it. You have the same results as before!
 
@@ -131,7 +133,7 @@ Introducing modularization into your app is a breeze with `xcodegen`.
 To learn how to do this, we create a XcodegenAppCore framework, that
 contains the classic fruit enum:
 
-1.  Create a folder "XcodegenAppCore"
+1.  Create a folder "XcodegenAppCore" in the root
 
 2.  Create "Fruit.swift" inside this folder. Add this as content:
 
@@ -142,6 +144,7 @@ contains the classic fruit enum:
       case cherry
     }
     ```
+![](assets/fruit.png)
 
 3.  Add an Info.plist ([this one does the job](https://github.com/num42/RxUserDefaults/blob/master/Supporting%20Files/Info.plist)) to the "XcodegenAppCore" folder.
 4.  Add this target to the `project.yml`:
@@ -191,8 +194,11 @@ One great way to handle dependencies on iOS is `carthage`.
 add roberthein's TinyConstraints as a Layout Library to learn how that's
 done:
 
-1.  brew install carthage
+3.  Run
 
+    ```
+    brew install carthage
+    ```
 2.  Create a file named "Cartfile"
 
 3.  Add
@@ -203,6 +209,8 @@ done:
 
     to it.
 
+    ![](assets/cartfile.png)
+
 4.  Run
 
     ```bash
@@ -212,7 +220,7 @@ done:
 5.  Add this line to your `XcodegenApp` target's dependencies in `project.yml`:
 
     ```yml
-      -carthage: TinyConstraints
+      - carthage: TinyConstraints
     ```
 
     Close `Xcode`, run `xcodegen`, then run the project.
@@ -232,8 +240,10 @@ done:
     view.addSubview(fruitLabel)
     fruitLabel.centerInSuperview()
     ```
+    ![](assets/viewDidLoadCode.png)
 
     Run the project to see TinyConstraints in Action:
+    <img src="/blog/articles/1970-01-01-xcodegen/assets/banana.png" alt="iphone_screenshot" style="height:40% !important; width:40% !important">
 
 ## Where to go from here?
 
