include fixes from yonas

--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -56,18 +56,15 @@ options: # Some general settings for the project
   createIntermediateGroups: true # If the folders are nested, also nest the groups in Xcode
   indentWidth: 2 # indent by 2 spaces
   tabWidth: 2 # a tab is 2 spaces
+  bundleIdPrefix: "de.number42"
 targets: # The List of our targets
   XcodegenApp:
     type: application
     platform: iOS
+    deploymentTarget: "10.3"
     sources:
       #Sources
       - path: XcodegenApp
-    settings:
-      IPHONEOS_DEPLOYMENT_TARGET: 10.3
-      PRODUCT_BUNDLE_IDENTIFIER: "de.number42.XcodegenApp"
-      PRODUCT_NAME: "XcodegenApp"
-      INFOPLIST_FILE: "XcodegenApp/Info.plist"
 ```
 
 ![](assets/projectyml.png)
@@ -90,16 +87,14 @@ hear you say. Do not worry, we will fix that immediately.
 Add the following target to the project.yml:
 
 ```yml
-XcodegenApp-iOS-Tests:
-  type: bundle.unit-test
-  platform: iOS
-  settings:
-    TEST_HOST: "$(BUILT_PRODUCTS_DIR)/XcodegenApp.app/XcodegenApp"
-    IPHONEOS_DEPLOYMENT_TARGET: 10.3 # What version of iOS do we target?
-  sources:
-    - path: XcodegenAppTests
-  dependencies:
-    - target: XcodegenApp
+  XcodegenApp-iOS-Tests:
+    type: bundle.unit-test
+    platform: iOS
+    deploymentTarget: "10.3"
+    sources:
+      - path: XcodegenAppTests
+    dependencies:
+      - target: XcodegenApp
 ```
 
 Again, close `Xcode`. (Xcode is a bit peculiar about having changed the
@@ -110,15 +105,13 @@ Generate the project, open it and run the tests: voila!
 To add UI Tests, add this target:
 
 ```yml
-XcodegenApp-iOS-UITests:
-  type: bundle.ui-testing
-  platform: iOS
-  settings:
-    BUNDLE_LOADER: "$(TEST_HOST)"
-  sources:
-    - path: XcodegenAppUITests
-  dependencies:
-    - target: XcodegenApp
+  XcodegenApp-iOS-UITests:
+    type: bundle.ui-testing
+    platform: iOS
+    sources:
+      - path: XcodegenAppUITests
+    dependencies:
+      - target: XcodegenApp
 ```
 
 That's it, a buildable app project with working tests.
@@ -147,24 +140,23 @@ contains the classic fruit enum:
 ![](assets/fruit.png)
 
 3.  Add an Info.plist ([this one does the job](https://github.com/num42/RxUserDefaults/blob/master/Supporting%20Files/Info.plist)) to the "XcodegenAppCore" folder.
+
 4.  Add this target to the `project.yml`:
 
     ```yml
     XcodegenAppCore:
-        type: framework
-        platform: iOS
-        settings:
-          IPHONEOS_DEPLOYMENT_TARGET: 10.3
-          PRODUCT_BUNDLE_IDENTIFIER: "de.number42.XcodegenApp.core"
-        sources:
-          - path: XcodegenAppCore
+      type: framework
+      platform: iOS
+      deploymentTarget: "10.3"
+      sources:
+        - path: XcodegenAppCore
     ```
 
 5.  Add
 
     ```yml
     dependencies:
-          - target: XcodegenAppCore
+        - target: XcodegenAppCore
     ```
 
     To the "XcodegenApp" target. Close `Xcode`, run `xcodegen`, then run the project. Ok, it's building, but nothing is happening yet.
@@ -250,3 +242,6 @@ done:
 We will revisit `xcodegen` for another time in the near future and see some more nice tricks, for example how to use `xcodegen` to generate an additional target with special debug features and much more!
 
 Stay tuned!
+
+## Acknowledgments
+Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release and to [Maximiliane Windl](https://number42.de/#team) for testing the tutorial, fixing issues and making screenshots. 
