last minute fixes

--- a/source/blog/articles/2018-07-03-mint/2018-07-03-mint.html.md
+++ b/source/blog/articles/2018-07-03-mint/2018-07-03-mint.html.md
@@ -93,7 +93,7 @@ mint install yonaskolb/xcodegen@1.8.0
 
 This installs the given version (and links it to `usr/local/bin`).
 
-## How do I use the Mintfile
+## How do I use the Mintfile?
 
 To define the versions to use in your project, you can add a file called
 _Mintfile_ to your project's root folder. In it, you can define the tools
@@ -116,7 +116,7 @@ mint run xcodegen
 ```
 
 with the _Mintfile_ present will install and run version "1.8.0" instead
-of a newer version. Note that you can leave out the user part (e.g.. "yonaskolb/") as it is defined in the _Mintfile_ already.
+of a newer version. Note that you can leave out the user part (e.g. "yonaskolb/") as it is defined in the _Mintfile_ already.
 
 ### mint bootstrap
 
