--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -1,10 +1,10 @@
 ---
 title: "Better iOS projects: How to manage the ruby environment of your iOS project using rbenv"
 #open graph metadata for facebook
-preview_url: "2018/05/22/rbenv.html"
+preview_url: "/blog/2018/05/22/2018-05-22-rbenv.html"
 preview_type: article
 preview_description: "In the series \"Better iOS projects\", we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects…"
-preview_image: "2018-05-22-rbenv/assets/Ruby_cut.jpg"
+preview_image: "blog/articles/2018-05-22-rbenv/assets/Ruby_cut.jpg"
 ---
 _Mai 22, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
 
