add series, add previous posts, link xcodegen, add acks for melanie to newest post

--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -7,6 +7,8 @@ _June 11, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
 
 # Getting (nearly) rid of Xcodeproject - A (not so) short Introduction to Xcodegen
 
+In the series “Better iOS projects”, we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects. 
+
 ## What is the problem with xcodeprojects?
 
 `Xcode` uses a project file, the `.xcodeproj` file, to bundle source code and resources for the IDE and build tools to digest. Though this works quite well most of the time, it has some downsides:
@@ -18,7 +20,7 @@ _June 11, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
 
 ## Introducing Xcodegen
 
-Xcodegen is a tool, that allows us to generate the xcodeproj file from a definition in a file called project.yml. As the xcodeproj file can be generated whenever we like, we do not even have to keep it inside our git and can ignore it (though I personally prefer to keep it checked in, so I can see what changes my edits to the project.yml file introduced to the project).
+[Xcodegen](https://github.com/yonaskolb/XcodeGen) is a tool, that allows us to generate the xcodeproj file from a definition in a file called project.yml. As the xcodeproj file can be generated whenever we like, we do not even have to keep it inside our git and can ignore it (though I personally prefer to keep it checked in, so I can see what changes my edits to the project.yml file introduced to the project).
 
 Here are the two most important features of Xcodegen:
 
@@ -244,4 +246,9 @@ We will revisit `xcodegen` for another time in the near future and see some more
 Stay tuned!
 
 ## Acknowledgments
-Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release and to [Maximiliane Windl](https://number42.de/#team) for testing the tutorial, fixing issues and making screenshots. 
+Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release and to [Maximiliane Windl](https://number42.de/#team) for testing the tutorial, fixing issues and making screenshots. Also thanks, as always, to [Melanie Kloss](https://number42.de/#team) for the great banner image.
+
+## Previously in "better iOS Projects":
+- [How to manage the ruby environment of your iOS project using rbenv](https://number42.de/blog/2018/05/22/rbenv-2018-05-22-rbenv.html)
+- [Advanced Usages of rbenv](https://number42.de/blog/2018/06/11/advancedrbenv-2018-06-11-advancedrbenv.html)
+- [How to manage your tooling with mint](https://number42.de/blog/2018/07/03/mint-2018-07-03-mint.html)
