add acks for melanie and series footer

--- a/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
+++ b/source/blog/articles/1970-01-01-xcodegen/1970-01-01-xcodegen.html.md
@@ -7,7 +7,7 @@ _June 11, 2018, by [Wolfgang Lutz](https://number42.de/#team)_
 
 # Getting (nearly) rid of Xcodeproject - A (not so) short Introduction to Xcodegen
 
-In the series “Better iOS projects”, we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects. 
+In the series “Better iOS projects”, we have a look at the various tools and environments that are useful to have a more convenient and efficient handling of iOS Projects.
 
 ## What is the problem with xcodeprojects?
 
@@ -248,7 +248,7 @@ Stay tuned!
 ## Acknowledgments
 Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release and to [Maximiliane Windl](https://number42.de/#team) for testing the tutorial, fixing issues and making screenshots. Also thanks, as always, to [Melanie Kloss](https://number42.de/#team) for the great banner image.
 
-## Previously in "better iOS Projects":
+## Everything from the series 'Better iOS Projects':
 - [How to manage the ruby environment of your iOS project using rbenv](https://number42.de/blog/2018/05/22/rbenv-2018-05-22-rbenv.html)
 - [Advanced Usages of rbenv](https://number42.de/blog/2018/06/11/advancedrbenv-2018-06-11-advancedrbenv.html)
 - [How to manage your tooling with mint](https://number42.de/blog/2018/07/03/mint-2018-07-03-mint.html)
