--- a/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
+++ b/source/blog/articles/2018-05-22-rbenv/2018-05-22-rbenv.html.md
@@ -247,3 +247,11 @@ In the next post of the "Better iOS Projects" series, we [have a look at some ad
 [10]:	https://en.wikipedia.org/wiki/Bash_(Unix_shell)
 [11]:	https://en.wikipedia.org/wiki/Ruby_(programming_language
 [12]:	https://en.wikipedia.org/wiki/Z_shell
+
+## Acknowledgments
+Thanks to [Melanie Kloss](https://number42.de/#team) for the great banner image.
+
+## Everything from the series 'Better iOS Projects':
+- [Advanced Usages of rbenv](https://number42.de/blog/2018/06/11/advancedrbenv-2018-06-11-advancedrbenv.html)
+- [How to manage your tooling with mint](https://number42.de/blog/2018/07/03/mint-2018-07-03-mint.html)
+- [Getting (nearly) rid of Xcodeproject - A (not so) short Introduction to Xcodegen](https://number42.de/blog/1970/01/01/xcodegen-1970-01-01-xcodegen.html)
