--- a/source/blog/articles/2018-07-03-mint/2018-07-03-mint.html.md
+++ b/source/blog/articles/2018-07-03-mint/2018-07-03-mint.html.md
@@ -160,4 +160,9 @@ fi
 Mint installs tools to `/usr/local/lib/mint`, so you can delete files here if something goes wrong.
 
 ## Acknowledgments
-Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release.
+Thanks to [Yonas Kolb](https://github.com/yonaskolb) for reviewing this article before release. Also thanks, as always, to [Melanie Kloss](https://number42.de/#team) for the great banner image.
+
+## Everything from the series 'Better iOS Projects':
+- [How to manage the ruby environment of your iOS project using rbenv](https://number42.de/blog/2018/05/22/rbenv-2018-05-22-rbenv.html)
+- [Advanced Usages of rbenv](https://number42.de/blog/2018/06/11/advancedrbenv-2018-06-11-advancedrbenv.html)
+- [Getting (nearly) rid of Xcodeproject - A (not so) short Introduction to Xcodegen](https://number42.de/blog/1970/01/01/xcodegen-1970-01-01-xcodegen.html)
